1labelpod.yml
apiVersion: v1
kind: Pod
metadata:
  name: podmynginx1
  labels:
   app: facebook
  namespace: myns
spec:
 nodeSelector:
  gpu: "true"
 containers:
 - name: mynginxcontainer
   image: nginx
   ports:
   - containerPort: 80
     hostPort: 80
