emptydirwala.yml
apiVersion: v1
kind: Pod
metadata:
 name: emptywalapod
spec:
 containers:
  - image: nginx
    name: ngcontainer
    volumeMounts:
     - name: htmlfolder
       mountPath: /usr/share/nginx/html
 volumes:
  - name: htmlfolder
    emptyDir: 
        medium: Memory
