gitrepowala.yml
apiVersion: v1
kind: Pod
metadata:
 name: gitrepowalapod
spec:
 containers:
  - image: nginx
    name: ngcontainer
    volumeMounts:
     - name: htmlfolder
       mountPath: /usr/share/nginx/html
       readOnly: true
    ports:
     - containerPort: 80
       protocol: TCP
 volumes:
  - name: htmlfolder
    gitRepo: 
       repository: https://github.com/ashutoshdeshmukh20/Talent-Hire-Hub
       revision: master
       directory: .
