hostpathwala.yml
apiVersion: v1
kind: Pod
metadata:
 name: hostpathwalapod
spec:
 containers:
  - image: nginx
    name: ngcontainer
    volumeMounts:
     - name: htmlfolder
       mountPath: /usr/share/nginx/html
 volumes:
  - name: htmlfolder
    hostPath: 
        path: /home/ec2-user/mydata
        type: Directory
