labelpod.yml
apiVersion: v1
kind: Pod
metadata:
  name: podmynginx2
  labels:
   app: facebook
spec:
 containers:
 - name: mynginxcontainer
   image: nginx
   ports:
   - containerPort: 80
