nfswala.yml
apiVersion: v1
kind: Pod
metadata:
 name: nfswalapod
spec:
 containers:
  - image: nginx
    name: ngcontainer
    volumeMounts:
     - name: htmlfolder
       mountPath: /usr/share/nginx/html
 volumes:
  - name: htmlfolder
    nfs: 
     server: "fs-052ba8fec8a7e1fa5.efs.us-east-1.amazonaws.com"
     path: /test
