nginxpod.yml
apiVersion: v1
kind: Pod
metadata:
  name: podmynginx1
spec:
 containers:
 - name: mynginxcontainer
   image: nginx
   ports:
   - containerPort: 80
   volumeMounts:
      - name: myconfigvolume
        mountPath: /etc/nginx/config.d/
 volumes:
   - name: myconfigvolume
     configMap:
      name: mynginxconf
