secretwala.yml
apiVersion: v1
kind: Pod
metadata:
  name: secretwalapod
spec:
 containers:
 - name: mysqlcontainer
   image: mysql
   ports:
   - containerPort: 3306
