headlessservice.yml
apiVersion: v1
kind: Service
metadata:
 name: myheadlessservice
spec:
 clusterIP: None
 ports:
 - port: 80
   targetPort: 80
 selector:
  app: development
