loadbalancerpodd.yml
apiVersion: v1
kind: Service
metadata:
 name: mylbservice
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: development
