ingresswala.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: myingress
spec:
 tls:
   - hosts:
       - oleoleapp.in
     secretName: mytlssecret
 rules:
  - host: oleoleapp.in
    http:
     paths:
      - path: /
        pathType: Prefix
        backend:
           service:
             name: test
             port:
               number: 80
